adding som progress for the array section

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,9 @@ set(EXE_ARRAY_8 array_exe_8)
 set(EXE_ARRAY_9 array_exe_9)
 set(EXE_ARRAY_10 array_exe_10)
 set(EXE_ARRAY_11 array_exe_11)
+set(EXE_ARRAY_12 array_exe_12)
+set(EXE_ARRAY_13 array_exe_13)
+set(EXE_ARRAY_14 array_exe_14)
+set(EXE_ARRAY_15 array_exe_15)
 
 add_subdirectory(arrays)
