working with array problems

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,5 +21,13 @@ set(EXE_ARRAY_12 array_exe_12)
 set(EXE_ARRAY_13 array_exe_13)
 set(EXE_ARRAY_14 array_exe_14)
 set(EXE_ARRAY_15 array_exe_15)
+set(EXE_ARRAY_16 array_exe_16)
+set(EXE_ARRAY_17 array_exe_17)
+set(EXE_ARRAY_18 array_exe_18)
+set(EXE_ARRAY_19 array_exe_19)
+set(EXE_ARRAY_20 array_exe_20)
+set(EXE_ARRAY_21 array_exe_21)
+set(EXE_ARRAY_22 array_exe_22)
+set(EXE_ARRAY_23 array_exe_23)
 
 add_subdirectory(arrays)
