work with arrays section over :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,5 +29,19 @@ set(EXE_ARRAY_20 array_exe_20)
 set(EXE_ARRAY_21 array_exe_21)
 set(EXE_ARRAY_22 array_exe_22)
 set(EXE_ARRAY_23 array_exe_23)
+set(EXE_ARRAY_24 array_exe_24)
+set(EXE_ARRAY_25 array_exe_25)
+set(EXE_ARRAY_26 array_exe_26)
+set(EXE_ARRAY_27 array_exe_27)
+set(EXE_ARRAY_28 array_exe_28)
+set(EXE_ARRAY_29 array_exe_29)
+set(EXE_ARRAY_30 array_exe_30)
+set(EXE_ARRAY_31 array_exe_31)
+set(EXE_ARRAY_32 array_exe_32)
+set(EXE_ARRAY_33 array_exe_33)
+set(EXE_ARRAY_34 array_exe_34)
+set(EXE_ARRAY_35 array_exe_35)
+set(EXE_ARRAY_36 array_exe_36)
+set(EXE_ARRAY_37 array_exe_37)
 
 add_subdirectory(arrays)
